# AI-projects

./: .gitignore  README.md
01-pdf-rag-agent/: README.md
01-pdf-rag-agent/rag-agent/: main.py  pyproject.toml
pdf-rag-agent/: README.md
pdf-rag-agent/agent/: .gitignore  pyproject.toml
